--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,23 @@
 version: '3'
 
+volumes:
+  postgres-data:
+    driver: local
+
 services:
   db:
     image: postgres
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
   web:
     build: .
     volumes:
       - .:/code
     ports:
       - "8000:8000"
+    environment:
+      - DATABASE_URL=postgres://postgres:postgres@db/postgres
+      - SECRET_KEY=developmentkittenssup
+      - DEBUG=1
     depends_on:
       - db
